coins match, fixed sidebar icon way too big

--- a/css/learn.css
+++ b/css/learn.css
@@ -257,8 +257,8 @@
     top: 0 !important;
     margin: 0;
     
-    width: auto; 
-    height: auto;
+    /*width: auto; 
+    height: auto;*/
     min-width: 20px; 
     min-height: 20px;
 
